# WellfobesEdge

./: Makefile  README.md  docker-compose.full.yml
center/: Dockerfile  README.md  docker-compose.center.yml  requirements.txt
center/config_service/: main.py
center/historian/: main.py
center/infra/emqx/: emqx.conf
center/infra/initdb/: 00_extension.sql  01_edge_values.sql  02_edge_values_dedupe.sql  03_site_config.sql
center/infra/migrations/: 030_edge_values.sql
center/tests/: test_historian_e2e.py
console/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
console/src/: App.jsx  api.js  components.jsx  drawers.jsx  styles.css  util.js  views.jsx
docs/: RUN-FULL-LOOP.md  RUN-PHASE3-FLEET.md  WEP-001-edge-gateway-fleet-architecture.md
edge/: Dockerfile  README.md  docker-compose.edge.yml  requirements.txt
edge/gateway/: buffer.py  config_client.py  main.py  sources.py  status_server.py
edge/tests/: test_durability_e2e.py  test_gateway_e2e.py  test_standalone_sandf_e2e.py  test_tagset_control.py
integration/: test_config_e2e.py
shared/: pyproject.toml
shared/tests/: test_contract.py
shared/wellfobes_contract/: __init__.py  identity.py  sparkplug.py
tools/: check_boundaries.py
